Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
Description
reactos-bootcd-0.4.15-dev-7108-g1cf6ce6-x86-gcc-lin-dbg
- Open NETCFGX
- DHCP enabled but "manual" gateway defined

- toggle manual config

- toggle DHCP

"manual" gateway is gone
Win2K3 : No "manual" information by default, everything erased when DHCP is enabled. Expected result : get rid of "manual" gateway defined by default when DHCP is set ?
Culprit code : https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/netcfgx/tcpipconf_notify.c and IDC_DEFGATEWAY management