[NETCFGX] Fix: Default gateway data "forgotten" when toggling use of DHCP

CORE-19368